# StockServer

./: .gitignore  README.md  package-lock.json  package.json
Server/: CMakeLists.txt  ServerProject
Server/src/: main.cpp
Server/src/server/: MyServer.cpp  MyServer.h  database.cpp  database.h
Server/src/stocks_service/: StockConfig.json  StockService.cpp  StockService.h
client/: next.config.js  package-lock.json  package.json
client/components/: SocketConnection.js
client/pages/api/: cplusplus.js
client/src/app/: Navbar.css  Navbar.js  page.js
client/src/app/buypopup/: buypopup.css  buypopup.js
client/src/app/hooks/: webSocket.js
client/src/app/sellpopup/: sellpopup.css  sellpopup.js
client/src/app/signup/: page.js
client/src/app/stocklist/: page.css  page.js
client/src/app/stocksowned/: page.css  page.js
client/src/app/transactions/: page.css  page.js
